Mindera/LIMSCallout/force-app/main/default/objects/Lead/fields/List_Name__c.field-meta.xml
<CustomField>
    <fullName>List_Name__c</fullName>
    <label>List Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>