Mindera/LIMSCallout/force-app/main/default/objects/Lead/fields/MOD_Id__c.field-meta.xml
<CustomField>
    <fullName>MOD_Id__c</fullName>
    <label>MOD Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>