Mindera/LIMSCallout/force-app/main/default/objects/Lead/fields/sftpHost__c.field-meta.xml
<CustomField>
    <fullName>sftpHost__c</fullName>
    <label>SFTP Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>