Mindera/LIMSCallout/force-app/main/default/objects/Lead/fields/sftpPassword__c.field-meta.xml
<CustomField>
    <fullName>sftpPassword__c</fullName>
    <label>SFTP Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>