Mindera/LIMSCallout/force-app/main/default/objects/Lead/fields/sftpResultsDir__c.field-meta.xml
<CustomField>
    <fullName>sftpResultsDir__c</fullName>
    <label>SFTP Results Directory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>