Mindera/LIMSCallout/force-app/main/default/objects/Lead/listViews/Nevada_Accepting_United.listView-meta.xml
<ListView>
    <fullName>Nevada_Accepting_United</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified</value>
    </filters>
    <filters>
        <field>Payers__c</field>
        <operation>includes</operation>
        <value>Unitedhealth Group</value>
    </filters>
    <label>Nevada Accepting United</label>
</ListView>