Mindera/LIMSCallout/force-app/main/default/objects/Lead/listViews/Welldyne_Target_List.listView-meta.xml
<ListView>
    <fullName>Welldyne_Target_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Welldyne Target List</label>
</ListView>