Mindera/LIMSCallout/force-app/main/default/objects/Lead/listViews/Welldyne_Target_List_California.listView-meta.xml
<ListView>
    <fullName>Welldyne_Target_List_California</fullName>
    <columns>FULL_NAME</columns>
    <columns>NPI_Number__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>California</value>
    </filters>
    <label>Welldyne Target List California</label>
</ListView>