Mindera/LIMSCallout/force-app/main/default/objects/Lead/listViews/Welldyne_Target_List_Nevada.listView-meta.xml
<ListView>
    <fullName>Welldyne_Target_List_Nevada</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>Nevada</value>
    </filters>
    <label>Welldyne Target List Nevada</label>
</ListView>